@@ -12,6 +12,9 @@ Thomas Meyer and Tom Power for contributing to this release.
 
 {{{ Bug fixes
 
+- Fixed exception in dockable window system when loading a plugin using
+  jar libraries (#3532429 Matthieu Casanova)
+
 - The plugin description in install panel now supports html
   (#3509183 Matthieu Casanova)
 
